# takopi-linear

./: PLAN.md  README.md  pyproject.toml
src/takopi_linear/: backend.py  bridge.py  client.py  poller.py  settings.py  types.py
tests/: test_bridge.py  test_client.py  test_poller.py  test_split.py  test_stop.py  test_webhook_parsing.py
